# ralph-browser-experiment

./: .env.example  .gitignore  Makefile  README.md  package-lock.json  package.json  prd.json  progress.txt  pyproject.toml  tsconfig.json
agents/: CLAUDE.md
agents/baseline-a11y-react/: README.md  actions.ts  agent.ts  manifest.yaml  snapshot.ts
agents/click-first-link/: README.md  agent.ts  manifest.yaml
agents/click-first-link-py/: README.md  agent.py  manifest.yaml
agents/codegen-predicate/: README.md  agent.ts  manifest.yaml
agents/dom-mutation-stream/: README.md  actions.ts  agent.ts  manifest.yaml  observer.ts
agents/dom-shell/: README.md  agent.ts  manifest.yaml  shell.ts
agents/fs-memory/: README.md  actions.ts  agent.ts  manifest.yaml  scratch.ts
agents/meta-mixture/: README.md  agent.ts  manifest.yaml  router.ts
agents/network-shadow/: README.md  actions.ts  agent.ts  manifest.yaml  network.ts  observe.ts
agents/plan-then-execute/: README.md  agent.ts  manifest.yaml  script.ts
agents/predicate-driven/: README.md  actions.ts  agent.ts  manifest.yaml  observe.ts  predicate.ts
agents/runtime-codegen/: README.md  agent.ts  codegen.ts  manifest.yaml  observe.ts
agents/speculative-rollback/: README.md  actions.ts  agent.ts  manifest.yaml  observe.ts  (+1 more)
docs/: champion-2026-05-12.md  easy-v2-results-2026-05-11.md  failure-clusters-2026-05-12.md  hard-app-sweep-2026-05-10.md  leaderboard.md  meta-mixture-2026-05-12.md  model-ablation-2026-05-11.md  proposed-approaches-2026-05-12.md  results.md
tasks/: CLAUDE.md  prd-general-browser-agent.md
(+202 files in other folders)
