[project]
name = "general-browser"
version = "0.0.1"
description = "Tournament harness for general-purpose browser agents"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
testpaths = ["harness/python/tests"]
python_files = ["test_*.py"]
pythonpath = ["harness/python"]

[tool.ruff]
target-version = "py313"
line-length = 100
